config/tlsprovision.yaml
# Copyright 2018 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tlsprovision-controller
  namespace: knative-serving
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tlsprovision-controller
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: tlsprovision-controller
    spec:
      serviceAccountName: controller
      containers:
      - name: tlsprovision-controller
        # This is the Go import path for the binary that is containerized
        # and substituted here.
        image: github.com/knative/serving/cmd/tlsprovisioner
        ports:
        - name: metrics
          containerPort: 9090
        volumeMounts:
        - name: config-logging
          mountPath: /etc/config-logging
      volumes:
        - name: config-logging
          configMap:
            name: config-logging
