config/gcp_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: knative-ingress
  namespace: istio-system
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: istio-ingressgateway
          servicePort: 80
